# proper-pixel-art

./: README.md  pyproject.toml
proper_pixel_art/: cli.py  colors.py  mesh.py  pixelate.py  quantize.py  utils.py  web.py
tests/: conftest.py  test_mesh.py  test_pixelate.py  test_visual_output.py
